--- a/hh.html
+++ b/hh.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teste de título</title>
+  <title>Hogwarts School</title>
 </head>
 <body>
+  <p>Projeto: Hogwarts School.<p/>
+  <p>Tema: Harry Potter.</p>
+  <p>Por: Sabrina Francez.</p>
 </body>
 </html>
