--- a/hh.html
+++ b/hh.html
@@ -7,7 +7,7 @@
   <title>Hogwarts School</title>
 </head>
 <body>
-  <p>Projeto: Hogwarts School.<p/>
+  <p>Projeto: Hogwarts School.</p>
   <p>Tema: Harry Potter.</p>
   <p>Por: Sabrina Francez.</p>
 </body>
